// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty list 1`] = `
<DocumentFragment>
  <div
    class="heading"
  >
    <h2>
      Top Movies (0)
    </h2>
    <form>
      <label
        for="search"
      >
        Search
      </label>
      <input
        data-testid="search-id"
        id="search"
        name="search"
        type="text"
        value=""
      />
    </form>
  </div>
  <div
    class="error"
    data-testid="empty-message-id"
  >
    "Ok people, nothing to see here, move along..."
  </div>
</DocumentFragment>
`;

exports[`happy path 1`] = `
<DocumentFragment>
  <div
    class="heading"
  >
    <h2>
      Top Movies (2)
    </h2>
    <form>
      <label
        for="search"
      >
        Search
      </label>
      <input
        data-testid="search-id"
        id="search"
        name="search"
        type="text"
        value=""
      />
    </form>
  </div>
  <div
    class="movie-icon-grid"
    data-testid="movie-icon-grid"
  >
    <div
      class="movie-icon"
    >
      <a
        class="icon-overlay"
        href="#"
      >
        <p>
          movie 1
        </p>
      </a>
      <img
        src="http://img.com"
      />
    </div>
    <div
      class="movie-icon"
    >
      <a
        class="icon-overlay"
        href="#"
      >
        <p>
          movie 2
        </p>
      </a>
      <img
        src="http://img.com"
      />
    </div>
  </div>
</DocumentFragment>
`;
